--- a/src/assets/_variables.scss
+++ b/src/assets/_variables.scss
@@ -1,4 +1,5 @@
 $font-family: "Lato", Arial, sans-serif;
+$font-color: #e6fff0;
 $primary-color: #425aa5;
 $background-color: #f8f9fd;
 $heading-color: #000;
