--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
 <div class="appContainer">
 
-  <!-- <app-sidebar *ngIf="loggedUserApp"></app-sidebar> -->
-
+  <app-sidebar [loggedUser]="loggedUserApp"></app-sidebar>
   <div class="appContainer-body">
     <app-toolbar [loggedUser]="loggedUserApp" [usersList]="usersList"></app-toolbar>
     <router-outlet></router-outlet>
   </div>
-
 
 </div>
