--- a/src/app/shared/components/toolbar/toolbar.component.scss
+++ b/src/app/shared/components/toolbar/toolbar.component.scss
@@ -3,8 +3,8 @@
 .toolbar {
   font-family: $font-family;
   color: $font-color;
-  background-color: $background-color;
-  background-image: linear-gradient($button-gradient-start, $button-gradient-end) !important;
+  background-color: $primary-color;
+  // background-image: linear-gradient($button-gradient-start, $button-gradient-end) !important;
   margin-bottom: 5px;
   padding: 5px 15px;
   display: flex;
@@ -27,6 +27,10 @@
   margin: 0;
 }
 
+.toolbar .bi-person-circle {
+  color: $font-color;
+}
+
 .toolbar-profile {
   margin-left: auto;
 }
@@ -38,5 +42,5 @@
 
 .username {
   position: relative;
-  bottom: 0.4rem;
+  top: 0.35rem;
 }
