--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 html, body {
-  height: 100%;
+  height: 110%;
   margin: 0;
   padding: 0;
-  overflow: hidden; /* optional: prevents scrollbars */
+  overflow-x: hidden;
 }
