feat: create medical reports list and detail pages

--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -56,9 +56,9 @@
                   </div>
                   <div class="col-12 menu-border">
                     <li>
-                      <a routerLink="list-medical-record">
+                      <a routerLink="medical-reports">
                         <i class="fs-4 bi bi-list-ul"></i>
-                        <span *ngIf="expandSidebar" class="d-none d-sm-inline">Listar Prontuário</span>
+                        <span *ngIf="expandSidebar" class="d-none d-sm-inline">Listar Prontuários</span>
                       </a>
                     </li>
                   </div>
