--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -2,7 +2,7 @@
   <h1 *ngIf="title == ''"> LABMedical </h1>
   <h1 *ngIf="title == '/home'"> Estatísticas e Informações </h1>
   <h1 *ngIf="title == '/register-patient'"> Cadastro do Paciente </h1>
-  <h1 *ngIf="title == '/list-medical-record'"> Prontuário de Paciente </h1>
+  <h1 *ngIf="title == '/medical-reports'"> Listagem de Prontuários </h1>
   <h1 *ngIf="title == '/register-appointment'"> Cadastro de Consulta </h1>
   <h1 *ngIf="title == '/register-exam'"> Cadastro de Exame </h1>
   <div class="toolbar-profile">
