--- a/src/app/register-appointment/register-appointment.component.html
+++ b/src/app/register-appointment/register-appointment.component.html
@@ -2,7 +2,8 @@
   <div class="container-fluid">
     <div class="row justify-content-center">
       <div class="col-12 text-center">
-        <h2>Encontre o paciente para consulta</h2>
+        <h2 *ngIf="!edit">Encontre o paciente para consulta</h2>
+        <h2 *ngIf="edit">Editar a consulta do paciente</h2>
       </div>
     </div>
 
@@ -16,6 +17,7 @@
           [(ngModel)]="patientSearch"
           placeholder="Procurar paciente..."
           (ngModelChange)="searchPatient()"
+          *ngIf="!edit"
         >
       </div>
 
@@ -213,7 +215,9 @@
 
               <div class="row justify-content-center">
                 <div class="form-group col-4">
-                  <button type="submit" class="form-control btn btn-primary rounded submit px-3">Cadastrar</button>
+                  <button *ngIf="!edit" type="submit" class="form-control btn btn-primary rounded submit px-3">Cadastrar</button>
+                  <p-button *ngIf="edit" class="m-3" (click)="delete()" severity="danger" label="Deletar"></p-button>
+                  <p-button *ngIf="edit" class="" (click)="update()" type="submit" label="Editar"></p-button>
                 </div>
               </div>
 
