--- a/src/app/shared/components/toolbar/toolbar.component.html
+++ b/src/app/shared/components/toolbar/toolbar.component.html
@@ -5,7 +5,9 @@
   <h1 *ngIf="title == 'edit-patient'"> Editar Paciente </h1>
   <h1 *ngIf="title == '/medical-reports'"> Listagem de Prontuários </h1>
   <h1 *ngIf="title == '/register-appointment'"> Cadastro de Consulta </h1>
+  <h1 *ngIf="title == 'edit-appointment'"> Editar Consulta </h1>
   <h1 *ngIf="title == '/register-exam'"> Cadastro de Exame </h1>
+  <h1 *ngIf="title == 'edit-exam'"> Editar Exame </h1>
   <div class="toolbar-profile">
     <div class="container">
       <div class="row">
